Adding notification and alarm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".main.Edit"></activity>
+        <receiver android:name=".main.MyBroadCastReceiver">
+            <intent-filter>
+                <action android:name="i.love.myself" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
